--- a/templates/update.html
+++ b/templates/update.html
@@ -30,6 +30,50 @@
 
             <button class="btn right orange white-text waves-effect waves-light" type="submit" name="updateProduct">Update</button>
             {% endif %}
+
+            <!---------- USR PART ------------------------>
+
+            {% if type == 'user' %}
+            <div class="row">
+                <div class="input-field col s4">
+                    <input id="usr_name" type="text" class="validate" name="usrName" value="{{item.Name}}">
+                    <label for="usr_name">User Name</label>
+                </div>
+                <div class="input-field col s4">
+                    <input id="usr_lastName" type="text" class="validate" name="usrLastName" value="{{item.usrLastName}}">
+                    <label for="usr_lastName">User last name</label>
+                </div>
+
+                <div class="input-field col s4">
+                    <select class="" name="selectRank">
+                        <option value="{{item.RankId}}">{{item.RankName}}</option>
+                        {% for rank in ranks %}
+                            {% if rank.Id != item.RankId %}
+                                <option value="{{rank.Id}}">{{rank.Name}}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                    <label for="usr_lastName">User rank</label>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="input-field col s4">
+                    <input name="userImg" id="usrImg" type="text" class="validate" value="{{item.Img}}">
+                    <label for="usrImg">Link user picture</label>
+                </div>
+                <div class="input-field col s4">
+                    <input name="userAddress" id="usrAddress" type="text" class="validate" value="{{item.Address}}">
+                    <label for="usrAddress">User address</label>
+                </div>
+                <div class="input-field col s4">
+                    <input name="userEmail" id="usrEmail" type="text" class="validate" value="{{item.Email}}">
+                    <label for="usrEmail">User email</label>
+                </div>
+            </div>
+
+            <button class="btn right orange white-text waves-effect waves-light" type="submit" name="updateUser">Update</button>
+            {% endif %}
         </form>
     </div>
 </div>
